--- a/MUN_ManageMentSytem/MUN/MUN_APP/templates/teacher_dashboard.html
+++ b/MUN_ManageMentSytem/MUN/MUN_APP/templates/teacher_dashboard.html
@@ -12,6 +12,10 @@
     <a href="{% url 'teacher_view_students' %}">View Students</a><br><br>
     <a href="{% url 'attendance_select' %}">Take Attendance</a><br><br>
     <a href="{% url 'upload_homework' %}">Upload Homework</a><br><br>
+    <a href="{% url 'add_student' %}">
+        ➕ Add Student
+    </a>
+
 
     
 
